# sndlab

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  contributing.md  introduction.md
book/src/concepts/: buffers.md  mix-graph.md  patches.md  roles.md
book/src/dsl/: bandpass.md  chirp.md  delay.md  env.md  fade_in.md  fade_out.md  gain.md  grains.md  highpass.md  loop_xfade.md  lowpass.md  mix.md  noise.md  overview.md  patch.md  sample.md  sine.md  tap.md  tremolo.md
book/src/embedding/: echo-field.md  sndlab-core.md
book/src/getting-started/: first-patch.md  install.md  mcp.md
book/src/projects/: manifest.md  multi-file.md
book/src/recipes/: hull-creak.md  ocean-rumble.md  sonar-ping.md
crates/sndlab/: Cargo.toml
crates/sndlab-core/: Cargo.toml
crates/sndlab-core/src/: decode.rs  engine.rs  lib.rs  signal.rs  stream.rs
crates/sndlab/src/: app.rs  log.rs  main.rs  mcp.rs  project.rs  reference.rs  scope.rs  spectrum.rs  syntax.rs  ui.rs
examples/sonar-ping/: README.md  patches.rhai
