[workspace]
resolver = "2"
members = ["crates/sndlab", "crates/sndlab-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Dawes <cmsd2@cantab.net>"]
license = "MIT"
repository = "https://github.com/cmsd2/sndlab"
publish = false

[workspace.dependencies]
# Internal: reusable engine for sndlab the TUI and any downstream
# consumer that wants to load .rhai patches at runtime.
sndlab-core = { path = "crates/sndlab-core" }

# UI: eframe is the window + event loop, egui is the immediate-mode UI,
# egui_code_editor is the syntax-highlighted editor widget for patches.
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "x11",
    "wayland",
] }
egui = "0.34"
egui_code_editor = "0.3"

# FFT for the scope's spectral view. Pure Rust, no native deps.
rustfft = "6"

# Scripting
rhai = { version = "1", features = ["sync"] }

# Audio
kira = "0.12"
fundsp = "0.23"

# MCP server
rmcp = { version = "1", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = ["full"] }
# axum is what rmcp's streamable HTTP server transport plugs into for
# the actual HTTP plumbing. Version matched to rmcp's expectation.
axum = "0.8"
schemars = "1"

# Serialisation (project manifests)
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Errors + diagnostics
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
