[package]
name = "sndlab-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Reusable engine for sndlab: Rhai scripting bound to a Kira/fundsp audio backend. Embeddable in TUIs, games, or batch tools."

[dependencies]
rhai.workspace = true
kira.workspace = true
fundsp.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Determinism: every patch evaluation seeds an explicit PCG generator
# from the patch name, so re-evaluating produces the same buffer.
rand = "0.8"
rand_pcg = "0.3"
