[package]
name = "sndlab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "A TUI sound-design lab with live Rhai scripting, Kira playback, and an MCP server for live AI collaboration."

[[bin]]
name = "sndlab"
path = "src/main.rs"

[dependencies]
sndlab-core.workspace = true

eframe.workspace = true
egui.workspace = true
egui_code_editor.workspace = true
rustfft.workspace = true
rfd.workspace = true
symphonia.workspace = true

rmcp.workspace = true
tokio.workspace = true
axum.workspace = true
schemars.workspace = true

serde.workspace = true
ron.workspace = true

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
